# openpbr

./: .gitmodules  Cargo.toml  LICENSE
openpbr/: Cargo.toml
openpbr-oracle/: Cargo.toml  build.rs
openpbr-oracle/src/: bridge.cpp  bridge.h  ffi.rs  lib.rs
openpbr/src/: consts.rs  dispersion.rs  fresnel.rs  lib.rs  material.rs  math.rs  microfacet.rs  sampler.rs  sampling.rs
openpbr/src/lobes/: bsdf.rs  coat.rs  diffuse.rs  fuzz.rs  metal.rs  mod.rs  specular.rs  specular_reflection.rs  specular_transmission.rs  test.rs
viewer/: Cargo.toml
viewer/src/: bvh.rs  main.rs  path_tracer.rs
