[package]
name = "openpbr"
version = "0.1.0"
edition = "2024"

[features]
rand = ["dep:rand"]

[dependencies]
glam.workspace = true
rand = { workspace = true, optional = true }

[dev-dependencies]
openpbr-oracle = { path = "../openpbr-oracle" }
integrate = "0.3.1"
statrs = "0.18.0"
rand.workspace = true
glam = { version = "0.32.1", features = ["rand"] }
