[package]
name = "viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
eframe = "0.35.0"
egui-file-dialog = "0.14.1"
env_logger = "0.11.11"
obj-rs = "0.7.4"
glam.workspace = true
rand.workspace = true
openpbr = { workspace = true, features = ["rand"] }
openpbr-oracle = { path = "../openpbr-oracle" }
